login Segue fix

--- a/phantomgames/Login/LoginScreen.storyboard
+++ b/phantomgames/Login/LoginScreen.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
+        <!--Loginv View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="LoginViewController" customModule="phantomgames" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="LoginvViewController" customModule="phantomgames" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,23 +36,33 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Login"/>
+                                <connections>
+                                    <action selector="Login:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="TvQ-Dy-JkZ"/>
+                                    <segue destination="fUg-8v-QsJ" kind="show" identifier="LoggedInSegue" id="ORx-a0-3zO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <connections>
+                        <outlet property="password" destination="MVS-vo-SG6" id="YTB-kz-BXi"/>
+                        <outlet property="username" destination="crk-bz-kN7" id="iQT-y1-ylO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="129.00763358778624" y="-2.1126760563380285"/>
         </scene>
-        <!--Storyboard Reference-->
-        <scene sceneID="JS4-7I-Kwe">
+        <!--HomeScreen-->
+        <scene sceneID="8bj-mp-ggl">
             <objects>
-                <viewControllerPlaceholder id="mfM-98-mkJ" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BdP-aj-Jst" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="HomeScreen" id="fUg-8v-QsJ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="JAY-uB-iQ5"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oIW-No-QEw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1065" y="4"/>
+            <point key="canvasLocation" x="1041" y="-3"/>
         </scene>
     </scenes>
     <resources>
