--- a/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
+++ b/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
@@ -4,43 +4,54 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="92" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="phantomgames" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="461" height="92"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="104" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="phantomgames" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="484" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="461" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="484" height="104"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tMx-W6-IKW">
-                        <rect key="frame" x="0.0" y="-18" width="236" height="128"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tMx-W6-IKW">
+                        <rect key="frame" x="5" y="5" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="BPg-l3-0Vu"/>
+                            <constraint firstAttribute="height" constant="100" id="PE3-D5-7AE"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tac-8y-Oe2">
-                        <rect key="frame" x="258" y="14" width="45" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tac-8y-Oe2">
+                        <rect key="frame" x="110" y="22" width="71" height="14"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgU-Vc-Mr5">
-                        <rect key="frame" x="258" y="43" width="47" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Xy-Jd-qiJ">
-                        <rect key="frame" x="366" y="29" width="75" height="35"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Xy-Jd-qiJ">
+                        <rect key="frame" x="398" y="36" width="56" height="35"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                        <buttonConfiguration key="configuration" style="filled" title="Play"/>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgU-Vc-Mr5">
+                        <rect key="frame" x="110" y="63" width="47" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" systemColor="systemBackgroundColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstItem="AgU-Vc-Mr5" firstAttribute="leading" secondItem="tMx-W6-IKW" secondAttribute="trailing" constant="5" id="7H2-FA-uPt"/>
+                    <constraint firstAttribute="trailing" secondItem="6Xy-Jd-qiJ" secondAttribute="trailing" constant="30" id="7go-Oy-Oci"/>
+                    <constraint firstItem="tMx-W6-IKW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ASZ-nS-Q1a"/>
+                    <constraint firstItem="tac-8y-Oe2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="Qv3-c8-dkM"/>
+                    <constraint firstItem="tMx-W6-IKW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="c0D-h8-rGd"/>
+                    <constraint firstItem="tac-8y-Oe2" firstAttribute="leading" secondItem="tMx-W6-IKW" secondAttribute="trailing" constant="5" id="cBv-xR-vUp"/>
+                    <constraint firstItem="AgU-Vc-Mr5" firstAttribute="leading" secondItem="tMx-W6-IKW" secondAttribute="trailing" constant="5" id="cTY-IC-xRG"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -49,7 +60,15 @@
                 <outlet property="play" destination="6Xy-Jd-qiJ" id="wmC-qu-wtp"/>
                 <outlet property="titleLabel" destination="tac-8y-Oe2" id="gf8-hj-c4X"/>
             </connections>
-            <point key="canvasLocation" x="246.56488549618319" y="36.619718309859159"/>
+            <point key="canvasLocation" x="264.12213740458014" y="40.845070422535215"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
