--- a/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
+++ b/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
@@ -64,6 +64,9 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Play"/>
+                                        <connections>
+                                            <action selector="playButtonTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="LxN-la-Grg"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -96,7 +99,7 @@
     </objects>
     <resources>
         <systemColor name="secondarySystemBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
